--- a/ubuntu/docker/PostgreSQL/3-replication/postgres-1 /config/postgresql.conf
+++ b/ubuntu/docker/PostgreSQL/3-replication/postgres-1 /config/postgresql.conf
@@ -15,7 +15,7 @@ dynamic_shared_memory_type = posix
 max_wal_size = 1GB
 min_wal_size = 80MB
 log_timezone = 'Asia/Dhaka'
-datestyle = 'iso, mdy'      # You can use it like dmy for date-month-year
+datestyle = 'iso, mdy'      # You can use it like dmy for day-month-year
 timezone = 'Asia/Dhaka'
 
 #locale settings
