--- a/ubuntu/docker/PostgreSQL/3-replication/replica/config/postgresql.conf
+++ b/ubuntu/docker/PostgreSQL/3-replication/replica/config/postgresql.conf
@@ -9,13 +9,13 @@ ident_file = '/config/pg_ident.conf'
 
 port = 5432
 listen_addresses = '*'
-max_connections = 100
-shared_buffers = 128MB
+max_connections = 150
+shared_buffers = 512MB
 dynamic_shared_memory_type = posix
 max_wal_size = 1GB
 min_wal_size = 80MB
 log_timezone = 'Asia/Dhaka'
-datestyle = 'iso, mdy' # You can use dmy for day-month-year
+datestyle = 'iso, dmy' # You can use dmy for day-month-year
 timezone = 'Asia/Dhaka'
 
 #locale settings
